versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/IncompleteReactions.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalIncompleteReactions
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function IncompleteReactionsDefaultConst() &
      bind(C, name='IncompleteReactionsDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function IncompleteReactionsDefaultConst

!! Create, default
function IncompleteReactionsDefault() &
      bind(C, name='IncompleteReactionsDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function IncompleteReactionsDefault

!! Create, general, const
function IncompleteReactionsCreateConst( &
   reaction, reactionSize &
) &
      bind(C, name='IncompleteReactionsCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), value :: reactionSize
   type(c_ptr) :: reaction(reactionSize)
   type(c_ptr) :: handle
end function IncompleteReactionsCreateConst

!! Create, general
function IncompleteReactionsCreate( &
   reaction, reactionSize &
) &
      bind(C, name='IncompleteReactionsCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), value :: reactionSize
   type(c_ptr) :: reaction(reactionSize)
   type(c_ptr) :: handle
end function IncompleteReactionsCreate

!! Assign
subroutine IncompleteReactionsAssign(handleLHS, handleRHS) &
      bind(C, name='IncompleteReactionsAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine IncompleteReactionsAssign

!! Delete
subroutine IncompleteReactionsDelete(handle) &
      bind(C, name='IncompleteReactionsDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine IncompleteReactionsDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function IncompleteReactionsRead(handle, filename, filenameSize) &
      bind(C, name='IncompleteReactionsRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function IncompleteReactionsRead

!! Write to file
function IncompleteReactionsWrite(handle, filename, filenameSize) &
      bind(C, name='IncompleteReactionsWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function IncompleteReactionsWrite

!! Print to standard output, in our prettyprinting format
function IncompleteReactionsPrint(handle) &
      bind(C, name='IncompleteReactionsPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function IncompleteReactionsPrint

!! Print to standard output, as XML
function IncompleteReactionsPrintXML(handle) &
      bind(C, name='IncompleteReactionsPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function IncompleteReactionsPrintXML

!! Print to standard output, as JSON
function IncompleteReactionsPrintJSON(handle) &
      bind(C, name='IncompleteReactionsPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function IncompleteReactionsPrintJSON


!! -----------------------------------------------------------------------------
!! Child: reaction
!! -----------------------------------------------------------------------------

!! Has
function IncompleteReactionsReactionHas(handle) &
      bind(C, name='IncompleteReactionsReactionHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function IncompleteReactionsReactionHas

!! Clear
subroutine IncompleteReactionsReactionClear(handle) &
      bind(C, name='IncompleteReactionsReactionClear')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine IncompleteReactionsReactionClear

!! Size
function IncompleteReactionsReactionSize(handle) &
      bind(C, name='IncompleteReactionsReactionSize') &
      result(vectorSize)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t) :: vectorSize
end function IncompleteReactionsReactionSize

!! Add
subroutine IncompleteReactionsReactionAdd(handle, fieldHandle) &
      bind(C, name='IncompleteReactionsReactionAdd')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine IncompleteReactionsReactionAdd

!! Get, by index \in [0,size), const
function IncompleteReactionsReactionGetConst(handle, index) &
      bind(C, name='IncompleteReactionsReactionGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: resultHandle
end function IncompleteReactionsReactionGetConst

!! Get, by index \in [0,size)
function IncompleteReactionsReactionGet(handle, index) &
      bind(C, name='IncompleteReactionsReactionGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: resultHandle
end function IncompleteReactionsReactionGet

!! Set, by index \in [0,size)
subroutine IncompleteReactionsReactionSet(handle, index, fieldHandle) &
      bind(C, name='IncompleteReactionsReactionSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine IncompleteReactionsReactionSet

!! ------------------------
!! Re: metadatum label
!! ------------------------

!! Has, by label
function IncompleteReactionsReactionHasByLabel(handle, meta, metaSize) &
      bind(C, name='IncompleteReactionsReactionHasByLabel') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   integer(c_int) :: has
end function IncompleteReactionsReactionHasByLabel

!! Get, by label, const
function IncompleteReactionsReactionGetByLabelConst(handle, meta, metaSize) &
      bind(C, name='IncompleteReactionsReactionGetByLabelConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function IncompleteReactionsReactionGetByLabelConst

!! Get, by label
function IncompleteReactionsReactionGetByLabel(handle, meta, metaSize) &
      bind(C, name='IncompleteReactionsReactionGetByLabel') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function IncompleteReactionsReactionGetByLabel

!! Set, by label
subroutine IncompleteReactionsReactionSetByLabel(handle, meta, metaSize, fieldHandle) &
      bind(C, name='IncompleteReactionsReactionSetByLabel')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine IncompleteReactionsReactionSetByLabel

!! ------------------------
!! Re: metadatum ENDF_MT
!! ------------------------

!! Has, by ENDF_MT
function IncompleteReactionsReactionHasByENDFMT(handle, meta) &
      bind(C, name='IncompleteReactionsReactionHasByENDFMT') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), value, intent(in) :: meta
   integer(c_int) :: has
end function IncompleteReactionsReactionHasByENDFMT

!! Get, by ENDF_MT, const
function IncompleteReactionsReactionGetByENDFMTConst(handle, meta) &
      bind(C, name='IncompleteReactionsReactionGetByENDFMTConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), value, intent(in) :: meta
   type(c_ptr) :: resultHandle
end function IncompleteReactionsReactionGetByENDFMTConst

!! Get, by ENDF_MT
function IncompleteReactionsReactionGetByENDFMT(handle, meta) &
      bind(C, name='IncompleteReactionsReactionGetByENDFMT') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_int), value, intent(in) :: meta
   type(c_ptr) :: resultHandle
end function IncompleteReactionsReactionGetByENDFMT

!! Set, by ENDF_MT
subroutine IncompleteReactionsReactionSetByENDFMT(handle, meta, fieldHandle) &
      bind(C, name='IncompleteReactionsReactionSetByENDFMT')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), value, intent(in) :: meta
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine IncompleteReactionsReactionSetByENDFMT

!! ------------------------
!! Re: metadatum fissionGenre
!! ------------------------

!! Has, by fissionGenre
function IncompleteReactionsReactionHasByFissionGenre(handle, meta, metaSize) &
      bind(C, name='IncompleteReactionsReactionHasByFissionGenre') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   integer(c_int) :: has
end function IncompleteReactionsReactionHasByFissionGenre

!! Get, by fissionGenre, const
function IncompleteReactionsReactionGetByFissionGenreConst(handle, meta, metaSize) &
      bind(C, name='IncompleteReactionsReactionGetByFissionGenreConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function IncompleteReactionsReactionGetByFissionGenreConst

!! Get, by fissionGenre
function IncompleteReactionsReactionGetByFissionGenre(handle, meta, metaSize) &
      bind(C, name='IncompleteReactionsReactionGetByFissionGenre') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function IncompleteReactionsReactionGetByFissionGenre

!! Set, by fissionGenre
subroutine IncompleteReactionsReactionSetByFissionGenre(handle, meta, metaSize, fieldHandle) &
      bind(C, name='IncompleteReactionsReactionSetByFissionGenre')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine IncompleteReactionsReactionSetByFissionGenre


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalIncompleteReactions
